2004-01-14  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-calendar-table.c (e_calendar_table_show_popup_menu):
	use get_selected_objects() instead of get_selected_comp().

2004-01-14  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-cal-model-tasks.c (get_status): removed assertion.

2004-01-14  Rodrigo Moya <rodrigo@ximian.com>

	* common/authentication.c (auth_new_cal_from_source): check
	return value from e_cal_new().

	* gui/gnome-cal.c (gnome_calendar_construct): if there is no
	default tasks folder, don't create the ECal from it.

2004-01-14  JP Rosevear <jpr@ximian.com>

	* gui/tasks-component.c (impl_requestCreateItem): don't try to set
	up the creation ecal unless we are actually creating a new item

2004-01-13  Rodney Dawes  <dobey@ximian.com>

	* gui/Makefile.am: Only link in libsoup where we need it

2004-01-13  Rodrigo Moya <rodrigo@ximian.com>

	* gui/calendar-component.c (impl_upgradeFromVersion): free 'base_uri'
	at the end of the function, or it will leak, and removed duplicated
	code to create the birthdays backend.

2004-01-12 Gary Ekker <gekker@novell.com>
 
 	* gui/Makefile.am: add e-pub-utils.[ch]
 	for Free/Busy publishing
 	
 	* gui/apps_evolution_calendar.schemas.in.in: add schema for
 	/apps/evo/calendar/free_busy key
 	
 	* gui/calendar-commands.c (publish_freebusy_cmd): change to
 	publish component rather than attach as email
 	
 	* gui/calendar-config-keys.h: add free_busy/urls key definition
 	
 	* gui/calendar-config.[ch] (calendar_config_get_free_busy): new
   	method for retrieving FB gconf key
 	(calendar_config_set_free_busy): new method for saving FB
 	gconf key
 	
 	* gui/e-cal-view.c (on_publish): change to publish component
 	rather than attach as email
 	
 	* gui/itip-utils.[ch] (itip_publish_begin): new method to process 
 	e_cal_components and aggregate the data if we are publishing
 	for multiple calendars
 	(itip_publish_comp): new method to publish the ical data to an
 	http server via libsoup